[tool.poetry]
name = "linerlybot-matrix"
version = "0.1.0"
description = "LinerlyBot is also a Matrix bot as well!"
authors = ["Linerly"]

[tool.poetry.dependencies]
python = "^3.8"
python-matrixbot = "^0.0.7"
matrix_bot_api = "^0.1"
Flask = "^2.0.1"
pyjokes = "^0.6.0"
quoters = "^0.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
